--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- vue version -->
   <script src="https://unpkg.com/vue@3.0.0"></script>
   <style>
     body{
